# bahasalang

./: CMakeLists.txt  README.md  output_executable
.github/workflows/: release.yml
example/: aritmatika.bh  fizz_buzz.bh  fizz_buzz.bh.ll  fungsi.bh  koleksi.bh  selamanya.bh  simple.bh  test.ll
src/: main.cpp
src/ast/: AST.cpp  AST.hpp  ASTPrinter.cpp  ASTPrinter.hpp
src/codegen/: BinaryOp.cpp  Codegen.cpp  Codegen.hpp  FixedArray.cpp  Function.cpp  IF.cpp  Try.cpp  VariableDecl.cpp
src/codegen/std/: PrintFunction.cpp  SleepFunction.cpp
src/lexer/: Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp
src/parser/: Parser.cpp  Parser.hpp
src/parser/expressions/: ExpressionParser.cpp
src/parser/lexer/: Lexer.cpp  Lexer.hpp
src/parser/statements/: StatementParser.cpp
src/parser/types/: TypeParser.cpp
